[gd_scene load_steps=27 format=2]

[ext_resource path="res://Textures/FinishLine.png" type="Texture" id=1]
[ext_resource path="res://Character/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Obstacles/Hammer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Character/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Materials/floor.tres" type="Material" id=5]
[ext_resource path="res://Pickups/Powerups/Shield.tscn" type="PackedScene" id=7]
[ext_resource path="res://Pickups/Powerups/Magnet.tscn" type="PackedScene" id=8]
[ext_resource path="res://Pickups/Coin.tscn" type="PackedScene" id=9]
[ext_resource path="res://Obstacles/Carousel.tscn" type="PackedScene" id=10]
[ext_resource path="res://Textures/rural_landscape.jpg" type="Texture" id=11]
[ext_resource path="res://Fonts/Rancher.tres" type="DynamicFont" id=12]
[ext_resource path="res://Levels/MatchStart.gd" type="Script" id=13]
[ext_resource path="res://Levels/Level01.gd" type="Script" id=14]
[ext_resource path="res://Textures/restart.png" type="Texture" id=15]
[ext_resource path="res://Textures/quit.png" type="Texture" id=16]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 11 )

[sub_resource type="Environment" id=2]
background_mode = 3
background_sky = SubResource( 1 )
background_color = Color( 0.14902, 0.505882, 0.819608, 1 )
background_energy = 1.5
tonemap_mode = 2
ssao_radius = 2.46
dof_blur_far_distance = 15.0
dof_blur_far_transition = 10.0
dof_blur_far_quality = 2

[sub_resource type="CubeMesh" id=3]

[sub_resource type="CubeMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
albedo_color = Color( 0.0313726, 0.333333, 0.0509804, 1 )

[sub_resource type="PlaneMesh" id=9]

[sub_resource type="SpatialMaterial" id=10]
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 2, 2, 1 )

[sub_resource type="BoxShape" id=11]

[sub_resource type="BoxShape" id=12]

[sub_resource type="BoxShape" id=13]

[sub_resource type="BoxShape" id=14]

[node name="Level01" type="Spatial"]
script = ExtResource( 14 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Floor" type="Node" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 2, 0, 0, 0, -5, -1.31134e-06, 0, -4.37114e-07, 15, 0.526, 0, -0.66 )
mesh = SubResource( 3 )
material/0 = ExtResource( 5 )

[node name="MeshInstance2" type="MeshInstance" parent="Floor"]
transform = Transform( -2, 0, 0, 0, -5, 0, 0, 0, -7, 0.517649, 0, -30.5375 )
mesh = SubResource( 3 )
material/0 = ExtResource( 5 )

[node name="MeshInstance4" type="MeshInstance" parent="Floor"]
transform = Transform( -2, 0, 0, 0, -5, 0, 0, 0, -15, 0.513, 0, -60.4444 )
mesh = SubResource( 3 )
material/0 = ExtResource( 5 )

[node name="Bridge3" type="MeshInstance" parent="Floor"]
transform = Transform( 0.473438, 0, 0, 0, 0.0606875, 0, 0, 0, 4.22887, 1.68336, 4.74671, -19.5534 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Bridge5" type="MeshInstance" parent="Floor"]
transform = Transform( 0.473438, 0, 0, 0, 0.0606875, 0, 0, 0, 4.22887, -0.704133, 4.74671, -19.5534 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Bridge6" type="MeshInstance" parent="Floor"]
transform = Transform( 0.473438, 0, 0, 0, 0.0606875, 0, 0, 0, 4.22887, 1.68326, 4.74671, -41.8045 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Bridge7" type="MeshInstance" parent="Floor"]
transform = Transform( 0.473438, 0, 0, 0, 0.0606875, 0, 0, 0, 4.22887, -0.7592, 4.74671, -41.8045 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="FinishLine" type="MeshInstance" parent="."]
transform = Transform( 1.67473, 0, 0, 0, 1, 0, 0, 0, 1, 0.52832, 5.02094, -71.9038 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="Area" type="Area" parent="FinishLine"]

[node name="CollisionShape" type="CollisionShape" parent="FinishLine/Area"]
shape = SubResource( 11 )

[node name="StartLine" type="MeshInstance" parent="."]
transform = Transform( 1.67473, 0, 0, 0, 1, 0, 0, 0, 1, 0.446733, 5.02094, 12.284 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 1.57705, 5.0221, 12.4398 )

[node name="Enemy" parent="." instance=ExtResource( 4 )]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, -0.380765, 5.01622, 12.3866 )
min_wait_time = 0.6
max_wait_time = 2.0
velocity = Vector3( 0, 0, -6 )

[node name="Obstacles" type="Node" parent="."]

[node name="Hammer" parent="Obstacles" instance=ExtResource( 3 )]
transform = Transform( -3.25841e-07, 0, -2, 0, 2, 0, 2, 0, -3.25841e-07, 8.337, 5, 3 )

[node name="Hammer2" parent="Obstacles" instance=ExtResource( 3 )]
transform = Transform( -3.25841e-07, 0, 2, 0, 2, 0, -2, 0, -3.25841e-07, -7.49323, 5, -0.303859 )

[node name="Hammer3" parent="Obstacles" instance=ExtResource( 3 )]
transform = Transform( -3.25841e-07, 0, -2, 0, 2, 0, 2, 0, -3.25841e-07, 8.34257, 5, -9.679 )

[node name="Carousel" parent="Obstacles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.482021, 5.03703, -29.9819 )

[node name="Hammer4" parent="Obstacles" instance=ExtResource( 3 )]
transform = Transform( -3.25841e-07, 0, 2, 0, 2, 0, -2, 0, -3.25841e-07, -7.49323, 5, -46.1756 )

[node name="Carousel2" parent="Obstacles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.536088, 5.03703, -56.2724 )

[node name="Hammer5" parent="Obstacles" instance=ExtResource( 3 )]
transform = Transform( -3.25841e-07, 0, -2, 0, 2, 0, 2, 0, -3.25841e-07, 8.34478, 5, -67.7297 )

[node name="Checkpoints" type="Node" parent="."]

[node name="Checkpoint1" type="Area" parent="Checkpoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 6, 10.1027 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Checkpoints/Checkpoint1"]
shape = SubResource( 12 )

[node name="Checkpoint2" type="Area" parent="Checkpoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 6, -12 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Checkpoints/Checkpoint2"]
shape = SubResource( 13 )

[node name="Checkpoint3" type="Area" parent="Checkpoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 6, -40 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Checkpoints/Checkpoint3"]
shape = SubResource( 14 )

[node name="Pickups" type="Node" parent="."]

[node name="Spatial" parent="Pickups" instance=ExtResource( 7 )]
transform = Transform( 0.999993, -0.00199313, -0.00306359, 0.00200406, 0.999992, 0.00357365, 0.00305645, -0.00357975, 0.999989, 2.1193, 7.06052, -23.5917 )

[node name="Spatial2" parent="Pickups" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.6072, 6.3195, -13.8666 )

[node name="Coins" type="Node" parent="Pickups"]

[node name="Spatial3" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54886, 6.27053, 8.84013 )

[node name="Spatial4" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54886, 6.27053, 7.63589 )

[node name="Spatial5" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54886, 6.27053, 2.32373 )

[node name="Spatial6" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54886, 6.27053, 1.24916 )

[node name="Spatial7" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54886, 6.27053, -3.28359 )

[node name="Spatial8" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54886, 6.27053, -4.48755 )

[node name="Spatial9" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54886, 6.27053, -10.1058 )

[node name="Spatial10" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7622, 6.27053, -13.8221 )

[node name="Spatial11" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7622, 6.27053, -14.965 )

[node name="Spatial12" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7622, 6.27053, -16.1333 )

[node name="Spatial13" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7622, 6.27053, -17.4091 )

[node name="Spatial14" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7622, 6.27053, -18.7328 )

[node name="Spatial15" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7622, 6.27053, -19.8791 )

[node name="Spatial16" parent="Pickups/Coins" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7622, 6.27053, -21.0336 )

[node name="MatchStart" type="Timer" parent="."]
wait_time = 4.0
autostart = true
script = ExtResource( 13 )

[node name="Control" type="Control" parent="MatchStart"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.429
margin_top = -19.0318
margin_right = -19.429
margin_bottom = -19.0318
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MatchStart/Control"]
margin_left = -63.9081
margin_top = -152.202
margin_right = 84.0919
margin_bottom = -76.2023
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 0.890196, 0, 1 )
text = "TIMER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MatchStart/Control"]
margin_left = -130.838
margin_top = 241.509
margin_right = 168.162
margin_bottom = 282.509
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 0.515625, 0, 1 )
text = "KEEP PRESSED TO MOVE!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinUI" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WinUI"]
anchor_left = 4.03
anchor_top = 7.036
anchor_right = 4.03
anchor_bottom = 7.036
margin_left = -115.984
margin_top = -76.0074
margin_right = 116.016
margin_bottom = -0.00744629
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 1, 0.0784314, 1 )
text = "YOU WIN!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="WinUI"]
margin_right = 58.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="WinUI/HBoxContainer"]
position = Vector2( 63.3735, 345.282 )
scale = Vector2( 1.70062, 1.45031 )
normal = ExtResource( 15 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="WinUI/HBoxContainer"]
position = Vector2( 208.836, 345.388 )
scale = Vector2( 1.88271, 1.59235 )
normal = ExtResource( 16 )
[connection signal="body_entered" from="FinishLine/Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="MatchStart" to="MatchStart" method="_on_MatchStart_timeout"]
[connection signal="timeout" from="MatchStart" to="Player" method="_on_MatchStart_timeout"]
[connection signal="timeout" from="MatchStart" to="Enemy" method="_on_MatchStart_timeout"]
[connection signal="pressed" from="WinUI/HBoxContainer/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="WinUI/HBoxContainer/TouchScreenButton2" to="." method="_on_TouchScreenButton2_pressed"]
